# cast

./: .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  amo-metadata.json  package-lock.json  package.json  web-ext-config.cjs  web-ext-config.mjs
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
extension/: manifest.json
extension/_locales/en/: messages.json
extension/_locales/it/: messages.json
extension/background/: background.js
extension/common/: errors.js
extension/content/: detect.js  youtube-button.js
extension/popup/: popup.css  popup.html  popup.js
install/: castbridge-nm-host.sh.in  castbridge.service  install-host.sh  io.github.gianluca.castbridge.json.in  it.gianlucamazza.castbridge.json.in  uninstall-host.sh
native/castbridge/: .clang-format  BUILD.gn  README.md  cast_channel_client.cc  cast_channel_client.h  castbridge_main.cc  daemon.cc  daemon.h  device_lister.cc  device_lister.h  ipc_server.cc  ipc_server.h  ipc_server_unittest.cc  media_controller.cc  media_controller.h  media_controller_unittest.cc  media_receiver_client.cc  media_receiver_client.h  mirror_controller.cc  mirror_controller.h  mirror_controller_unittest.cc  nm_relay.cc  nm_relay.h  window_resolver.cc  window_resolver.h  youtube_cast_client.cc  youtube_cast_client.h  youtube_controller.cc  youtube_controller.h  youtube_controller_unittest.cc  youtube_lounge.cc  youtube_lounge.h
native/docs/: remoting-design.md
native/integration/: README.md  build.sh  gen-clangd.sh  openscreen.pin  regen-patch.sh  setup-openscreen.sh
native/integration/patches/: 0001-wayland-h264-cast-streaming-sender.patch
packaging/aur/: PKGBUILD
scripts/: check-ids.mjs  check-locales.mjs
